[project]
name = "reelrecon-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "requests>=2.32.3",
    "roboflow>=1.1.49",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.46.3",
    "ultralytics>=8.3.34",
]

[tool.uv.sources]
ultralytics = { git = "https://github.com/THU-MIG/yolov10.git" }
